# Kairo

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: coverage-badge.yml  lint_and_test.yml
src/kairo/: __init__.py
src/kairo/application/: interfaces.py
src/kairo/application/dto/: user.py
src/kairo/application/interactors/: base.py  user.py
src/kairo/domain/: exceptions.py
src/kairo/domain/entities/: __init__.py  project.py  task.py  user.py
src/kairo/domain/gateways/: __init__.py  project_gateway.py  task_gateway.py  user_gateway.py
src/kairo/infrastructure/: user_gateway_sqlite.py
src/kairo/infrastructure/sqlalchemy/: base.py
src/kairo/infrastructure/sqlalchemy/gateways/: user_gateway.py
src/kairo/infrastructure/sqlalchemy/mappers/: user_mapper.py
src/kairo/infrastructure/sqlalchemy/models/: user.py
src/kairo/presentation/http/: application.py  deps.py
tests/: conftest.py
tests/unit/application/: test_user.py
tests/unit/domain/: test_project.py  test_task.py  test_user.py
