[project]
name = "kairo"
version = "0.1.0"
description = "Just another jira alternative"
authors = [{ name = "Artur Boiun", email = "arturboyun@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uuid7>=0.1.0",
]

[dependency-groups]
dev = [
    "faker>=37.5.3",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]

[project.scripts]
kairo = "kairo:main"

[tool.coverage.run]
source = ["src/kairo"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --disable-warnings"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
